add support for drupal 11

--- a/idp_insights.info.yml
+++ b/idp_insights.info.yml
@@ -2,4 +2,4 @@ name: Drupal Insight
 type: module
 description: Provide drupal insights
 package: Custom
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
