--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "axelerant/drupal-insight-backstage",
     "description": "A module to provide info to backstage.io",
-    "type": "drupal-custom-module",
+    "type": "drupal-module",
     "license": "GPL-2.0",
     "authors": [
         {
